# Mlops-Project

./: .dockerignore  Dockerfile  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: gcp.yaml
artifact/04_04_2025_01_12_27/data_transformation/transformed/: test.npy  train.npy
artifact/04_04_2025_01_12_27/data_transformation/transformed_object/: preprocessing.pkl
artifact/04_04_2025_01_12_27/feature_store/: diabetes.csv
artifact/04_04_2025_01_12_27/ingested/: test.csv  train.csv
artifact/04_04_2025_01_12_27/model_trainer/trained_model/: model.pkl
config/: schema.yaml
notebook/: exp_notebook.ipynb  mongo_demo.ipynb
src/cloud_storage/: gcs_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: gcp_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  gcs_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
static/: style.css
templates/: diabetes_form.html
